Fix tp swap teleporting players who died such as in gallery (#3338)